@@ -21,6 +21,8 @@
  */
 package org.gjt.sp.jedit.textarea;
 
+import java.awt.RenderingHints;
+
 /**
  * Class for representing AntiAlias values. The following modes are supported:
  * none standard lcd subpixel (JDK 1.6 only)
@@ -30,19 +32,37 @@ package org.gjt.sp.jedit.textarea;
  */
 public class AntiAlias
 {
-	public static final Object NONE = "none";
+	public static final String NONE = "none";
 
-	public static final Object STANDARD = "standard";
+	public static final String STANDARD = "standard";
 
-	public static final Object SUBPIXEL = "subpixel";
+	public static final String SUBPIXEL = "subpixel";
+	
+	public static final String SUBPIXEL_HRGB = "subpixel HRGB";
 
-	public static final Object[] comboChoices = { NONE, STANDARD, SUBPIXEL };
+	public static final String SUBPIXEL_VRGB = "subpixel VRGB";
+	
+	public static final String SUBPIXEL_HBGR = "subpixel HBGR";
+	
+	public static final String SUBPIXEL_VBGR = "subpixel VBGR";
+	
+	public static final String[] comboChoices = { NONE, STANDARD, SUBPIXEL_HRGB, SUBPIXEL_VRGB, 
+		SUBPIXEL_HBGR, SUBPIXEL_VBGR };
 
+	public static final Object[] renderHints = {RenderingHints.VALUE_TEXT_ANTIALIAS_OFF,
+		RenderingHints.VALUE_TEXT_ANTIALIAS_ON, RenderingHints.VALUE_TEXT_ANTIALIAS_LCD_HRGB,
+		RenderingHints.VALUE_TEXT_ANTIALIAS_LCD_VRGB, RenderingHints.VALUE_TEXT_ANTIALIAS_LCD_HBGR,
+		RenderingHints.VALUE_TEXT_ANTIALIAS_LCD_VBGR};
+	
 	public void set(int newValue)
 	{
 		m_val = newValue;
 	}
 
+	public Object renderHint() {
+		return renderHints[m_val];
+	}
+	
 	public AntiAlias(boolean isEnabled)
 	{
 		m_val = isEnabled ? 1 : 0;
@@ -66,11 +86,14 @@ public class AntiAlias
 
 	public void fromString(String v)
 	{
+		m_val = 0;
+		if (v.equals(SUBPIXEL)) v = SUBPIXEL_HRGB;
 		for (int i = 0; i < comboChoices.length; ++i)
 		{
 			if (comboChoices[i].equals(v))
 			{
 				m_val = i;
+				break;
 			}
 		}
 	}
